--- a/whatsapp/example.env
+++ b/whatsapp/example.env
@@ -1,3 +1,6 @@
-ACCESS_TOKEN = "YOUR_ACCESS_TOKEN"
+SHORT_TERM_TOKEN = "YOUR_SHORT_TERM_TOKEN"
+LONG_TERM_TOKEN = "YOUR_LONG_TERM_TOKEN"
+APP_ID = "YOUR_APP_ID"
+CLIENT_SECRET = "YOUR_CLIENT_SECRET"
 PHONE_NUMBER_ID = "YOUR_PHONE_NUMBER_ID"
 RECIPIENT_PHONE = "RECIPIENT_PHONE"
