--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,35 @@
 altair==6.0.0
+altex==0.2.0
 annotated-types==0.7.0
 anyio==4.12.0
+asn1crypto==1.5.1
 assemblyai==0.48.0
 asttokens==3.0.1
 attrs==25.4.0
 beautifulsoup4==4.14.3
 blinker==1.9.0
+boto3==1.42.47
+botocore==1.42.47
 cachetools==6.2.2
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+cloudpickle==3.1.1
 colorama==0.4.6
 comm==0.2.3
+contourpy==1.3.3
+cryptography==46.0.5
+cycler==0.12.1
 debugpy==1.8.19
 decorator==5.2.1
 dotenv==0.9.9
+entrypoints==0.4
 executing==2.2.1
+Faker==40.4.0
+favicon==0.7.0
+filelock==3.20.3
+fonttools==4.61.1
 gitdb==4.0.12
 GitPython==3.1.46
 google==3.0.0
@@ -27,6 +41,7 @@ google-auth-oauthlib==1.2.3
 googleapis-common-protos==1.72.0
 gspread==6.2.1
 h11==0.16.0
+htbuilder==0.9.0
 httpcore==1.0.9
 httplib2==0.31.0
 httpx==0.28.1
@@ -36,11 +51,17 @@ ipython==9.9.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
+jmespath==1.1.0
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
 jupyter_client==8.8.0
 jupyter_core==5.9.1
+kiwisolver==1.4.9
+lxml==6.0.2
+Markdown==3.10.2
+markdownlit==0.0.7
 MarkupSafe==3.0.3
+matplotlib==3.10.8
 matplotlib-inline==0.2.1
 narwhals==2.16.0
 nest-asyncio==1.6.0
@@ -52,6 +73,7 @@ parso==0.8.5
 pillow==12.1.1
 platformdirs==4.5.1
 plotly==6.5.2
+prometheus_client==0.24.1
 prompt_toolkit==3.0.52
 proto-plus==1.26.1
 protobuf==6.33.1
@@ -60,34 +82,59 @@ pure_eval==0.2.3
 pyarrow==23.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 pydeck==0.9.1
 Pygments==2.19.2
+PyJWT==2.11.0
+pymdown-extensions==10.20.1
+pyOpenSSL==25.3.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+PyYAML==6.0.3
 pyzmq==27.1.0
 referencing==0.37.0
 requests==2.32.5
 requests-oauthlib==2.0.0
 rpds-py==0.30.0
 rsa==4.9.1
+s3transfer==0.16.0
 six==1.17.0
 smmap==5.0.2
+snowflake-connector-python==4.3.0
+snowflake-snowpark-python==1.45.0
+sortedcontainers==2.4.0
 soupsieve==2.8
+st-annotated-text==4.0.2
+st-theme==1.2.3
 stack-data==0.6.3
 streamlit==1.54.0
+streamlit-avatar==0.1.3
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras==0.7.8
+streamlit-image-coordinates==0.4.0
+streamlit-keyup==0.3.0
+streamlit-notify==0.3.1
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
+streamlit_faker==0.0.4
 tenacity==9.1.4
 toml==0.10.2
+tomlkit==0.14.0
 tornado==6.5.4
 traitlets==5.14.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
+tzlocal==5.3.1
 uritemplate==4.2.0
 urllib3==2.5.0
+validators==0.35.0
 watchdog==6.0.0
 wcwidth==0.2.14
 websockets==15.0.1
